# Code-platform

./: .README.md.swp  .env.docker  .env.example  ALIYUN_DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT_GUIDE.md  Dockerfile  FUTURE_ROADMAP.md  HIGH_PRIORITY_OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  README.md  USER_CATEGORY_GUIDE.md  create_test_user.py  deploy.sh  docker-compose.yml  export_docker_image.sh  init_database.sql  make_admin.py  requirements.txt  run_from_image.sh  test_api.py
backend/: .env  .env.production  Dockerfile  app.py  decorators.py  init_data.py  requirements.txt
backend/instance/: bio_code_share.db
backend/migrations/: add_search_indexes.sql
backend/models/: __init__.py  code.py  code_tag.py  comment.py  favorite.py  user.py  user_category.py
backend/resources/: admin.py  category.py  code.py  comment.py  favorite.py  health.py  tag.py  user.py  user_category.py
backend/schemas/: validation.py
backend/utils/: cache.py  rate_limiter.py
cppmd5/: CMakeLists.txt
cppmd5/src/: main.cpp
docker/: nginx.conf  start.sh  supervisord.conf
frontend/: .env  .env.example  .env.production  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/backend/: .dockerignore  app.py
frontend/backend/instance/: bio_code_share.db
frontend/backend/models/: __init__.py  category.py  code.py  result.py  tag.py  user.py
frontend/backend/resources/: category.py  code.py  comment.py  favorite.py  tag.py  user.py
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: MainLayout.vue  (+1 more)
(+19 files in other folders)
